--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -37,18 +37,21 @@
     filter: grayscale(0%)
   }
 
-  a {
-    width: 100%;
-    height: 100%;
-  }
+  // a {
+  //   width: 100%;
+  //   height: 100%;
+  // }
 
   span {
-    padding: 3.5rem 0 0 0;
+    width: 100%;
+    height: 100%;
+    justify-self: center;
+    align-self: center;
   }
 }
 
 .contactme_container {
-  width: 100%;
+  width: 90vw;
   height: 50vh;
   display: flex;
   // flex-wrap: wrap;
@@ -57,6 +60,8 @@
   align-content: center;
   flex-wrap: wrap;
   margin: 0 auto;
+  border-left: 0.5rem solid darkslategrey;
+  border-left: 0.5rem solid darkslategrey;
 
 }
 
@@ -65,13 +70,14 @@
 }
 
 .blog_container {
-  width: 100%;
+  width: 90vw;
   height: auto;
   background-color: white;
   display: flex;
   flex-direction: column;
   justify-content: center;
   border: 0.5rem solid darkslategrey;
+  margin: 0 auto;
 }
 
 .blogpost {
@@ -108,7 +114,7 @@
   display: flex;
   flex-direction: row;
   width: 20%;
-  height: 100%;
+  height: 20%;
   justify-content: center;
   margin: auto 0;
   border-left: 0.5rem solid $stone;
