--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -17,7 +17,8 @@
 
 $scrollread: var(--parallaxopacity);
 $rubble: #371E30;
-$offwhite: rgb(219, 219, 219);
+$offwhite: #dbdbdb;
+$offwhiteinvert: #242424;
 $linkgrey: rgb(49, 49, 49);
 $redfade: radial-gradient(#750000, #e00000);
 $stone: rgb(182, 184, 181);
