More responsive tweaks

--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -21,6 +21,7 @@ $offwhite: #dbdbdb;
 $offwhiteinvert: #242424;
 $linkgrey: rgb(49, 49, 49);
 $redfade: radial-gradient(#750000, #e00000);
+$offstone: rgb(151, 144, 144);
 $stone: rgb(182, 184, 181);
 $navtext: rgb(61, 61, 61);
 
