--- a/Scripts/contactstyles.css
+++ b/Scripts/contactstyles.css
@@ -415,7 +415,7 @@ body {
 
 .contactme_container {
   width: 90vw;
-  height: 50vh;
+  height: 65vh;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -431,8 +431,8 @@ body {
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   margin: 0 auto;
-  border-left: 0.5rem solid darkslategrey;
-  border-left: 0.5rem solid darkslategrey;
+  border-left: 0.5rem solid #371E30;
+  border-right: 0.5rem solid #371E30;
 }
 
 .linkedback {
@@ -442,7 +442,7 @@ body {
 .blog_container {
   width: 90vw;
   height: auto;
-  background-color: white;
+  background-color: #dbdbdb;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -453,7 +453,7 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  border: 0.5rem solid darkslategrey;
+  border: 0.5rem solid #371E30;
   margin: 0 auto;
 }
 
@@ -461,6 +461,7 @@ body {
   width: 100%;
   height: auto;
   border-bottom: 0.5rem solid #687272;
+  background-color: #b6b8b5;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -482,12 +483,7 @@ body {
 .post_title {
   width: 20%;
   padding: 0 1rem;
-  background-color: #b6b8b5;
-}
-
-.post_content {
-  width: 60%;
-  padding: 0.5rem 1rem;
+  background-color: #979090;
 }
 
 .post_thumbnail {
@@ -504,14 +500,18 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   margin: auto 0;
-  border-left: 0.5rem solid #b6b8b5;
+  border-left: 0.5rem solid #687272;
 }
 
 .post_thumbnail img {
   width: 90%;
-  height: auto;
   max-width: 10rem;
-  max-height: 100%;
+  max-height: 10rem;
+}
+
+.post_content {
+  width: 60%;
+  padding: 0.5rem 1rem;
 }
 
 .topbar {
