--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -52,7 +52,7 @@
 
 .contactme_container {
   width: 90vw;
-  height: 50vh;
+  height: 65vh;
   display: flex;
   // flex-wrap: wrap;
   flex-direction: row;
@@ -60,8 +60,8 @@
   align-content: center;
   flex-wrap: wrap;
   margin: 0 auto;
-  border-left: 0.5rem solid darkslategrey;
-  border-left: 0.5rem solid darkslategrey;
+  border-left: 0.5rem solid $rubble;
+  border-right: 0.5rem solid $rubble;
 
 }
 
@@ -72,11 +72,11 @@
 .blog_container {
   width: 90vw;
   height: auto;
-  background-color: white;
+  background-color: $offwhite;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border: 0.5rem solid darkslategrey;
+  border: 0.5rem solid $rubble;
   margin: 0 auto;
 }
 
@@ -84,6 +84,7 @@
   width: 100%;
   height: auto;
   border-bottom: 0.5rem solid rgb(104, 114, 114);
+  background-color: $stone;
   // margin: auto 0;
 
   display: flex;
@@ -102,12 +103,7 @@
 .post_title {
   width: 20%;
   padding: 0 1rem;
-  background-color: $stone;
-}
-
-.post_content {
-  width: 60%;
-  padding: 0.5rem 1rem;
+  background-color: $offstone;
 }
 
 .post_thumbnail {
@@ -117,16 +113,22 @@
   height: 20%;
   justify-content: center;
   margin: auto 0;
-  border-left: 0.5rem solid $stone;
+  border-left: 0.5rem solid rgb(104, 114, 114);
   
 
   img {
     width: 90%;
-    height: auto;
     max-width: 10rem;
-    max-height: 100%;
+    max-height: 10rem;
   }
 }
+
+.post_content {
+  width: 60%;
+  padding: 0.5rem 1rem;
+}
+
+
 
 .topbar {
   z-index: 4;
