webkit overflow scroll test for iOS safari

--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -59,7 +59,7 @@ body {
   height: 100vh;
   overflow-x: hidden !important;
   overflow-y: auto !important;
-  -webkit-overflow-scrolling: touch;
+  -webkit-overflow-scrolling: scroll;
   background-color: #313131;
 }
 
