--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -110,16 +110,19 @@
   display: flex;
   flex-direction: row;
   width: 20%;
-  height: 20%;
+  height: 100%;
   justify-content: center;
-  margin: auto 0;
+  align-content: center;
   border-left: 0.5rem solid rgb(104, 114, 114);
+  margin: auto 0;
   
 
   img {
-    width: 90%;
-    max-width: 10rem;
-    max-height: 10rem;
+    width: 75%;
+    height: auto;
+    max-width: 5rem;
+    max-height: 5rem;
+    
   }
 }
 
