--- a/Scripts/purposestyles.scss
+++ b/Scripts/purposestyles.scss
@@ -12,7 +12,7 @@
   width: 80%;
   border-radius: 0.25rem;
   margin: auto;
-  padding: 2rem;
+  padding: 2rem 1rem;
   background-color: $offwhite;
 
   h2 {
