--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -271,6 +271,16 @@ body {
 
 }
 
+.coderimage {
+  filter: invert(100%);
+  width: 100%;
+  height: auto;
+  margin-top: 2rem;
+
+  img {
+    width: 100%;
+  }
+}
 
 
 
