--- a/Scripts/portfoliostyles.scss
+++ b/Scripts/portfoliostyles.scss
@@ -5,11 +5,12 @@
   height: 80vh;
   width: 90vw;
   margin: 0 auto;
+  padding: 0.25rem 0 0 0;
 }
 
 .skillbar {
   width: 100%;
-  height: 25%;
+  height: 30%;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -54,8 +55,22 @@
   }
 
   .coderacademy {
-    height: 65%;
+    height: 55%;
     width: auto;
     align-self: center;
+    filter: brightness(50%);
   }
+}
+
+@media only screen and (min-width: 900px) {
+  .skilltile {
+    font-size: 6rem;
+
+  .coderacademy {
+    height: 75%;
+    width: auto;}
+
+  }
+
+  
 }
