--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -38,13 +38,14 @@
   }
 
   // a {
-  //   width: 100%;
   //   height: 100%;
   // }
 
   span {
-    width: 100%;
     height: 100%;
+    width: 100%;
+    padding: 5rem;
+    
     justify-self: center;
     align-self: center;
   }
