--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -321,9 +321,9 @@ body {
     margin-top: none;
   }
 
-  #navbar {
+  // #navbar {
     
-  }
+  // }
 
   .contactme_container {
     flex-direction: row;
