--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -44,7 +44,7 @@
   span {
     height: 100%;
     width: 100%;
-    padding: 5rem;
+    padding: 5rem 0;
     
     justify-self: center;
     align-self: center;
