--- a/Scripts/contactstyles.css
+++ b/Scripts/contactstyles.css
@@ -58,7 +58,7 @@ body {
           transform-style: preserve-3d;
   height: 100vh;
   overflow-x: hidden;
-  overflow-y: scroll !important;
+  overflow-y: auto !important;
   -webkit-overflow-scrolling: touch;
   background-color: #313131;
 }
@@ -119,6 +119,7 @@ body {
       align-content: center;
   background-color: #dbdbdb;
   border-radius: 0.25rem;
+  width: auto;
 }
 
 #navbar {
@@ -170,12 +171,15 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-left: 0;
+  padding-right: 0;
   height: 100%;
+  max-width: 100%;
   -webkit-transition-duration: 0.05s;
           transition-duration: 0.05s;
   font-size: 1.5rem;
   color: #3d3d3d;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .logo-full > * {
@@ -194,7 +198,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 .logo-part {
@@ -230,7 +234,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 1rem;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .fa {
@@ -418,6 +422,7 @@ body {
           justify-content: center;
   -ms-flex-line-pack: baseline;
       align-content: baseline;
+  text-shadow: 0 0 0.25rem white;
 }
 
 .contactcard .fa {
@@ -489,7 +494,7 @@ body {
   width: 100%;
   height: auto;
   border-bottom: 0.5rem solid #687272;
-  background-color: #b6b8b5;
+  background-color: #979090;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -510,42 +515,55 @@ body {
 
 .post_title {
   width: 20%;
-  padding: 0 1rem;
+  height: 100%;
   background-color: #979090;
+  font-size: 1rem;
 }
 
 .post_thumbnail {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-orient: horizontal;
+  -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-      -ms-flex-direction: row;
-          flex-direction: row;
+      -ms-flex-direction: column;
+          flex-direction: column;
   width: 20%;
-  height: 100%;
+  height: auto;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
   -ms-flex-line-pack: center;
       align-content: center;
-  border-left: 0.5rem solid #687272;
-  margin: auto 0;
+  margin: auto;
 }
 
 .post_thumbnail img {
-  width: 75%;
-  height: 75%;
-  max-width: 5rem;
-  max-height: 5rem;
+  width: 100%;
+  height: auto;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  margin: auto;
 }
 
 .post_content {
   width: 60%;
-  padding: 0.5rem 1rem;
+  padding: 0 1rem;
+  background-color: #b6b8b5;
 }
 
 .topbar {
   z-index: 4;
+}
+
+#orange {
+  background-color: #ff7700;
+}
+
+@media only screen and (min-width: 900px) {
+  .post_thumbnail img {
+    width: 50%;
+    height: 40%;
+  }
 }
 /*# sourceMappingURL=contactstyles.css.map */
