--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -26,12 +26,12 @@
   flex-direction: column;
   justify-content: center;
   align-content: baseline;
+  text-shadow: 0 0 0.25rem white;
 
   .fa {
     color: $rubble;
   }
   
-
   &:hover {
     opacity: 1;
     filter: grayscale(0%)
@@ -85,7 +85,7 @@
   width: 100%;
   height: auto;
   border-bottom: 0.5rem solid rgb(104, 114, 114);
-  background-color: $stone;
+  background-color: $offstone;
   // margin: auto 0;
 
   display: flex;
@@ -103,37 +103,54 @@
 
 .post_title {
   width: 20%;
-  padding: 0 1rem;
+  height: 100%;
   background-color: $offstone;
+  font-size: 1rem;
 }
 
 .post_thumbnail {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   width: 20%;
-  height: 100%;
+  height: auto;
   justify-content: center;
   align-content: center;
-  border-left: 0.5rem solid rgb(104, 114, 114);
-  margin: auto 0;
+  // border-left: 0.5rem solid rgb(104, 114, 114);
+  margin: auto;
   
 
   img {
-    width: 75%;
-    height: 75%;
-    max-width: 5rem;
-    max-height: 5rem;
+    // margin-right: 1rem;
+    width: 100%;
+    height: auto;
+    border-radius: 1rem;
+    padding: 0.5rem;
+    margin: auto;
     
   }
 }
 
 .post_content {
   width: 60%;
-  padding: 0.5rem 1rem;
+  padding: 0 1rem;
+  background-color: $stone;
 }
 
 
 
 .topbar {
   z-index: 4;
+}
+
+#orange {
+  background-color: #ff7700;
+}
+
+@media only screen and (min-width: 900px) {
+  .post_thumbnail {
+    img {
+      width: 50%;
+      height: 40%;
+    }
+  }
 }
