--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -58,7 +58,7 @@ body {
           transform-style: preserve-3d;
   height: 100vh;
   overflow-x: hidden;
-  overflow-y: scroll !important;
+  overflow-y: auto !important;
   -webkit-overflow-scrolling: touch;
   background-color: #313131;
 }
@@ -119,6 +119,7 @@ body {
       align-content: center;
   background-color: #dbdbdb;
   border-radius: 0.25rem;
+  width: auto;
 }
 
 #navbar {
@@ -170,12 +171,15 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-left: 0;
+  padding-right: 0;
   height: 100%;
+  max-width: 100%;
   -webkit-transition-duration: 0.05s;
           transition-duration: 0.05s;
   font-size: 1.5rem;
   color: #3d3d3d;
-  overflow: auto;
+  overflow: hidden;
 }
 
 .logo-full > * {
@@ -194,7 +198,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 .logo-part {
@@ -230,7 +234,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 1rem;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .fa {
