--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -63,7 +63,7 @@ body {
   height: 100vh;
   // overflow-x: hidden !important;
   overflow-x: hidden;
-  overflow-y: scroll !important;
+  overflow-y: auto !important;
   -webkit-overflow-scrolling: touch;
   background-color: $linkgrey;
   // margin-top: 2rem;
@@ -117,6 +117,7 @@ body {
   align-content: center;
   background-color: $offwhite;
   border-radius: 0.25rem;
+  width: auto;
 }
 
 #navbar {
@@ -144,12 +145,14 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: center;
+  padding-left: 0;
+  padding-right: 0;
   height: 100%;
-  // max-width: 100%;
+  max-width: 100%;
   transition-duration: 0.05s;
   font-size: 1.5rem;
   color: $navtext;
-  overflow: auto;
+  overflow: hidden;
 }
 
 
@@ -160,7 +163,7 @@ body {
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 .logo-part {
@@ -179,7 +182,7 @@ body {
   justify-content: center;
   padding: 1rem;
   // max-width: 100vw;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .fa {
