--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -177,9 +177,9 @@ body {
   max-width: 100%;
   -webkit-transition-duration: 0.05s;
           transition-duration: 0.05s;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: #3d3d3d;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .logo-full > * {
@@ -234,6 +234,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 1rem;
+  max-width: 100%;
   overflow: auto;
 }
 
@@ -345,6 +346,7 @@ body {
 @media only screen and (min-width: 475px) {
   .nav-link {
     padding: 0 5.5rem 0 5.5rem;
+    font-size: 1.5rem;
   }
 }
 
