--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -126,6 +126,7 @@ body {
   border-top: 0.25rem solid rgb(128, 128, 128);
   border-bottom: 0.25rem solid rgb(128, 128, 128);
   justify-content: center;
+  // align-content: center;
 }
 
 #navbar > .logo-full {
@@ -150,9 +151,9 @@ body {
   height: 100%;
   max-width: 100%;
   transition-duration: 0.05s;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: $navtext;
-  overflow: hidden;
+  overflow: auto;
 }
 
 
@@ -181,7 +182,7 @@ body {
   flex-direction: column;
   justify-content: center;
   padding: 1rem;
-  // max-width: 100vw;
+  max-width: 100%;
   overflow: auto;
 }
 
@@ -291,6 +292,7 @@ body {
 @media only screen and (min-width: 475px) {
   .nav-link {
     padding: 0 5.5rem 0 5.5rem;
+    font-size: 1.5rem;
   }
 }
 
