--- a/Scripts/contactstyles.css
+++ b/Scripts/contactstyles.css
@@ -177,9 +177,9 @@ body {
   max-width: 100%;
   -webkit-transition-duration: 0.05s;
           transition-duration: 0.05s;
-  font-size: 1.5rem;
+  font-size: 1.3rem;
   color: #3d3d3d;
-  overflow: hidden;
+  overflow: visible;
 }
 
 .logo-full > * {
@@ -234,6 +234,7 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 1rem;
+  max-width: 100%;
   overflow: auto;
 }
 
@@ -342,9 +343,18 @@ body {
   width: 100%;
 }
 
+.copyright {
+  width: 100%;
+  padding: 1rem 0;
+  background-color: #371E30;
+  color: #dbdbdb;
+  text-align: center;
+}
+
 @media only screen and (min-width: 475px) {
   .nav-link {
     padding: 0 5.5rem 0 5.5rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -502,6 +512,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
+  max-height: 25vh;
+  overflow: hidden;
 }
 
 .blogpost:first-of-type {
@@ -539,7 +551,7 @@ body {
 }
 
 .post_thumbnail img {
-  width: 100%;
+  max-height: 20vh;
   height: auto;
   border-radius: 1rem;
   padding: 0.5rem;
@@ -550,6 +562,8 @@ body {
   width: 60%;
   padding: 0 1rem;
   background-color: #b6b8b5;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 .topbar {
