--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -90,6 +90,8 @@
 
   display: flex;
   flex-direction: row;
+  max-height: 25vh;
+  overflow: hidden;
 
   &:first-of-type {
     border-top: 0.5rem solid darkslategrey;
@@ -121,7 +123,7 @@
 
   img {
     // margin-right: 1rem;
-    width: 100%;
+    max-height: 20vh;
     height: auto;
     border-radius: 1rem;
     padding: 0.5rem;
@@ -134,6 +136,8 @@
   width: 60%;
   padding: 0 1rem;
   background-color: $stone;
+  overflow-x: hidden;
+  overflow-y: scroll;
 }
 
 
