--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -344,11 +344,14 @@ body {
 }
 
 .copyright {
-  width: 100%;
+  width: 80%;
   padding: 1rem 0;
   background-color: #371E30;
   color: #dbdbdb;
   text-align: center;
+  position: relative;
+  bottom: 0;
+  margin: 0 auto;
 }
 
 @media only screen and (min-width: 475px) {
