--- a/Scripts/globalstyles.scss
+++ b/Scripts/globalstyles.scss
@@ -288,11 +288,15 @@ body {
 }
 
 .copyright {
-  width: 100%;
+  width: 80%;
   padding: 1rem 0;
   background-color: $rubble;
   color: $offwhite;
   text-align: center;
+
+  position: relative;
+  bottom: 0;
+  margin: 0 auto;
 }
 
 @media only screen and (min-width: 475px) {
