--- a/Scripts/contactstyles.scss
+++ b/Scripts/contactstyles.scss
@@ -97,9 +97,10 @@
     border-top: 0.5rem solid darkslategrey;
   }
 
-  h3 {
+  h2 {
     text-decoration: none;
     text-align: center;
+    padding: 0.5rem 0;
   }
 }
 
@@ -125,10 +126,10 @@
   img {
     // margin-right: 1rem;
     max-height: 20vh;
-    width: 100%;
-    height: auto;
+    height: 12.5vh;
+    width: auto;
     border-radius: 1rem;
-    padding: 0.5rem;
+    padding: 0.25rem;
     margin: auto;
     
   }
@@ -156,7 +157,7 @@
   .post_thumbnail {
     img {
       width: 50%;
-      height: 40%;
+      height: auto;
     }
   }
 }
