--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -27,7 +27,7 @@
 }
 
 body {
-  background-color: #371E30;
+  background-color: #1E191A;
   padding: none;
   margin: none;
 }
@@ -119,7 +119,7 @@ body {
       align-content: center;
   background-color: #dbdbdb;
   border-radius: 0.25rem;
-  width: auto;
+  max-width: auto;
 }
 
 #navbar {
@@ -130,8 +130,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  border-top: 0.25rem solid gray;
-  border-bottom: 0.25rem solid gray;
+  border-top: 0.25rem solid #636366;
+  border-bottom: 0.25rem solid #636366;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -178,8 +178,8 @@ body {
   -webkit-transition-duration: 0.05s;
           transition-duration: 0.05s;
   font-size: 1.3rem;
-  color: #3d3d3d;
-  overflow: visible;
+  color: #3D3E3F;
+  overflow-x: visible;
 }
 
 .logo-full > * {
@@ -242,7 +242,7 @@ body {
   -webkit-transition: color 0.5s;
   transition: color 0.5s;
   z-index: 2;
-  color: #371E30;
+  color: #1E191A;
 }
 
 .fa:hover {
@@ -346,7 +346,7 @@ body {
 .copyright {
   width: 80%;
   padding: 1rem 0;
-  background-color: #371E30;
+  background-color: #1E191A;
   color: #dbdbdb;
   text-align: center;
   position: relative;
