--- a/Scripts/purposestyles.css
+++ b/Scripts/purposestyles.css
@@ -27,7 +27,7 @@
 }
 
 body {
-  background-color: #371E30;
+  background-color: #1E191A;
   padding: none;
   margin: none;
 }
@@ -58,7 +58,7 @@ body {
           transform-style: preserve-3d;
   height: 100vh;
   overflow-x: hidden;
-  overflow-y: scroll !important;
+  overflow-y: auto !important;
   -webkit-overflow-scrolling: touch;
   background-color: #313131;
 }
@@ -119,6 +119,7 @@ body {
       align-content: center;
   background-color: #dbdbdb;
   border-radius: 0.25rem;
+  max-width: auto;
 }
 
 #navbar {
@@ -129,8 +130,8 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  border-top: 0.25rem solid gray;
-  border-bottom: 0.25rem solid gray;
+  border-top: 0.25rem solid #636366;
+  border-bottom: 0.25rem solid #636366;
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
@@ -170,12 +171,15 @@ body {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  padding-left: 0;
+  padding-right: 0;
   height: 100%;
+  max-width: 100%;
   -webkit-transition-duration: 0.05s;
           transition-duration: 0.05s;
-  font-size: 1.5rem;
-  color: #3d3d3d;
-  overflow: auto;
+  font-size: 1.3rem;
+  color: #3D3E3F;
+  overflow-x: visible;
 }
 
 .logo-full > * {
@@ -194,7 +198,7 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  max-width: 100vw;
+  max-width: 100%;
 }
 
 .logo-part {
@@ -230,14 +234,15 @@ body {
       -ms-flex-pack: center;
           justify-content: center;
   padding: 1rem;
-  overflow: hidden;
+  max-width: 100%;
+  overflow: auto;
 }
 
 .fa {
   -webkit-transition: color 0.5s;
   transition: color 0.5s;
   z-index: 2;
-  color: #371E30;
+  color: #1E191A;
 }
 
 .fa:hover {
@@ -326,9 +331,33 @@ body {
   font-size: 1.75rem;
 }
 
+.coderimage {
+  -webkit-filter: invert(100%);
+          filter: invert(100%);
+  width: 100%;
+  height: auto;
+  margin-top: 2rem;
+}
+
+.coderimage img {
+  width: 100%;
+}
+
+.copyright {
+  width: 80%;
+  padding: 1rem 0;
+  background-color: #1E191A;
+  color: #dbdbdb;
+  text-align: center;
+  position: relative;
+  bottom: 0;
+  margin: 0 auto;
+}
+
 @media only screen and (min-width: 475px) {
   .nav-link {
     padding: 0 5.5rem 0 5.5rem;
+    font-size: 1.5rem;
   }
 }
 
@@ -367,7 +396,7 @@ body {
 
 .purposecontainer {
   width: 90vw;
-  height: 100vh;
+  height: 100%;
   margin: 0 auto;
   background-color: #242424;
   padding: 2rem 0;
@@ -379,6 +408,7 @@ body {
   margin: auto;
   padding: 2rem 1rem;
   background-color: #dbdbdb;
+  font-size: 1.25rem;
 }
 
 .mypurpose h2 {
