--- a/Scripts/purposestyles.scss
+++ b/Scripts/purposestyles.scss
@@ -2,7 +2,7 @@
 
 .purposecontainer {
   width: 90vw;
-  height: 100vh;
+  height: 100%;
   margin: 0 auto;
   background-color: $offwhiteinvert;
   padding: 2rem 0;
@@ -14,6 +14,7 @@
   margin: auto;
   padding: 2rem 1rem;
   background-color: $offwhite;
+  font-size: 1.25rem;
 
   h2 {
     margin-bottom: 2rem;
