--- a/Scripts/globalstyles.css
+++ b/Scripts/globalstyles.css
@@ -120,6 +120,7 @@ body {
   background-color: #dbdbdb;
   border-radius: 0.25rem;
   max-width: auto;
+  border-bottom: 0.25rem solid #dbdbdb;
 }
 
 #navbar {
